--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -189,10 +189,19 @@
 								<div class="row">
 									<h4 class="col-md-3">Mesajlarım</h4>
 
-									<a style="float:right;margin-bottom:20px;" type = "button" data-title="Edit"
+									<a style="float:right;margin-bottom:20px;" type = "button" data-title="Cevapla"
 									data-toggle="modal" data-target="#mesajgonder" class = "mesajgonderbutonu btn btn-danger">Mesaj Gönder</a>
 
 								</div>
+
+								<%= form_tag 'mesajlarim' , :method => :get do %>
+
+								<%= select_tag :messagetype,options_for_select([['Gelen Mesajlar','gelenmesajlar'], ['Giden Mesajlar','gidenmesajlar']],params[:messagetype]),{:onchange => "this.form.submit()"} %>
+
+								<% end %>
+
+								<br>
+								<br>
 
 								<div class="row table-responsive">
 
@@ -215,25 +224,27 @@
 										</thead>
 										<tbody>
 
-											<% messages = current_user.tos.paginate(:page => params[:page], :per_page => 10)  %>
-											<% messages.each do |mesaj| %>
+											<% if @messagetype == 'gelenmesajlar' %>
+
+											<% @messages.each do |mesaj| %>
 
 											<tr>
 
 												<td>
 												<input type="checkbox" class="checkthis" />
 												</td>
+
 												<td><%= mesaj.from.name %></td>
 												<td><%= mesaj.from.surname %></td>
 												<td><%= mesaj.topic %></td>
 												<td><%= mesaj.from.username %></td>
 												<td><%= mesaj.created_at %></td>
 												<td style="display:none;"><%= mesaj.id %></td>
-												
+
 												<td>
 												<p data-placement="top" data-toggle="tooltip"
-												title="Edit">
-													<button class="btn btn-primary btn-xs <%= mesaj.from.username %>" data-title="Edit"
+												title="Cevapla">
+													<button class="btn btn-primary btn-xs <%= mesaj.from.username %>" data-title="Cevapla"
 													data-toggle="modal" data-target="#mesajcevapla">
 														<span class="glyphicon glyphicon-pencil"></span>
 													</button>
@@ -241,8 +252,73 @@
 
 												<td>
 												<p data-placement="top" data-toggle="tooltip"
-												title="Delete">
-													<button class="<%= mesaj.id %>  btn btn-danger btn-xs" data-title="Delete"
+												title="Sil">
+													<button class="<%= mesaj.id %>  btn btn-danger btn-xs" data-title="Sil"
+													data-toggle="modal" data-target="#mesajsil">
+														<span class="glyphicon glyphicon-trash"></span>
+													</button>
+												</p></td>
+
+												<script>
+													$(".<%= mesaj.from.username %>").click(function() {
+
+													$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
+
+														$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
+														});
+
+													<% if mesaj.from_id != current_user.id %>
+
+													$(".<%= mesaj.id %>").click(function() {
+
+														$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
+
+														});
+
+													<% else %>
+
+													$(".<%= mesaj.id %>").click(function() {
+
+														$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
+
+														});
+
+													<% end %></script>
+
+											</tr>
+
+											<%end %>
+
+											<% elsif @messagetype == 'gidenmesajlar' %>
+
+											<% @messages.each do |mesaj| %>
+
+											<tr>
+
+												<td>
+												<input type="checkbox" class="checkthis" />
+												</td>
+
+												<td><%= mesaj.to.name %></td>
+												<td><%= mesaj.to.surname %></td>
+												<td><%= mesaj.topic %></td>
+												<td><%= mesaj.to.username %></td>
+												<td><%= mesaj.created_at %></td>
+												<td style="display:none;"><%= mesaj.id %></td>
+
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Cevapla">
+													<button class="btn btn-primary btn-xs <%= mesaj.from.username %>" data-title="Cevapla"
+													data-toggle="modal" data-target="#mesajcevapla">
+														<span class="glyphicon glyphicon-pencil"></span>
+													</button>
+												</p></td>
+
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Sil">
+													<button class="<%= mesaj.id %>  btn btn-danger btn-xs" data-title="Sil"
 													data-toggle="modal" data-target="#mesajsil">
 														<span class="glyphicon glyphicon-trash"></span>
 													</button>
@@ -254,23 +330,30 @@ $(".<%= mesaj.from.username %>").click(function() {
 	$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
 
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
-	});
 	
+	});
+
+<% if mesaj.from_id != current_user.id %>
 
 $(".<%= mesaj.id %>").click(function() {
 
-	
+	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
 
-	$(".silpaneli .mesajid").val("<%= mesaj.id %>");
+	});
 
-});
+<% else %>
 
+$(".<%= mesaj.id %>").click(function() {
 
-												</script>
-												
-												
+	$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
+
+	});
+
+<% end %></script>
 
 											</tr>
+
+											<%end %>
 
 											<% end %>
 
@@ -282,10 +365,10 @@ $(".<%= mesaj.id %>").click(function() {
 
 								<link href="http://mislav.github.io/will_paginate/pagination.css" rel="stylesheet">
 
-								<% if messages.count > 10 %>
+								<% if @messages.count > 10 %>
 
 								<div class="apple_pagination">
-									<%= will_paginate messages, :container => false,
+									<%= will_paginate @messages, :container => false,
 									:previous_label => 'Önceki', :next_label => 'Sonraki' %>
 								</div>
 
@@ -296,7 +379,7 @@ $(".<%= mesaj.id %>").click(function() {
 							<%= form_for :mesaj, :url => 'mesajgonder',:html => {id: 'mesajcevaplaformu'} do |m| %>
 
 							<div class="cevaplapaneli modal fade" id="mesajcevapla" tabindex="-1" role="dialog"
-							aria-labelledby="edit" aria-hidden="true">
+							aria-labelledby="Cevapla" aria-hidden="true">
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -344,7 +427,7 @@ $(".<%= mesaj.id %>").click(function() {
 							<%= form_for :mesaj, :url => 'mesajgonder',:html => {id: 'mesajgonderformu'} do |m| %>
 
 							<div class="modal fade" id="mesajgonder" tabindex="-1" role="dialog"
-							aria-labelledby="edit" aria-hidden="true">
+							aria-labelledby="Cevapla" aria-hidden="true">
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -392,7 +475,7 @@ $(".<%= mesaj.id %>").click(function() {
 							<%= form_for :mesaj, :url => 'mesajsil',:html => {id: 'mesajsilformu'} do |m| %>
 
 							<div class="silpaneli modal fade" id="mesajsil" tabindex="-1" role="dialog"
-							aria-labelledby="edit" aria-hidden="true">
+							aria-labelledby="Cevapla" aria-hidden="true">
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -401,31 +484,35 @@ $(".<%= mesaj.id %>").click(function() {
 												<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 											</button>
 											<h4 class="modal-title custom_align" id="Heading">Bu Mesajı Sil</h4>
-											
+
 											<br>
 
-											<span style="display:none;color:red"  class="basarisiz">Mesaj Gönderme Başarısız</span>
+											<span style="display:none;color:red"  class="basarisiz">Mesaj Silme Başarısız</span>
 
-											<span style="display:none;color:green"  class="basarili">Mesaj Başarıyla Gönderildi</span>
+											<span style="display:none;color:green"  class="basarili">Mesaj Başarıyla Silindi</span>
 										</div>
-										<div class="modal-body">
 
-											<div class="alert alert-danger">
+										<div style="display:none;" class="form-group">
+											<%= m.text_field :mesajfromid,type: "text",class:"form-control mesajfromid" %>
+										</div>
+
+										<div style="display:none;" class="form-group">
+											<%= m.text_field :mesajtoid,type: "text",class:"form-control mesajtoid" %>
+										</div>
+
+										<div class="silmeonayi modal-body">
+
+											<div class=" alert alert-danger">
 												<span class="glyphicon glyphicon-warning-sign"></span> Silmek istediğinden emin misin?
 											</div>
-											
-											<div style="display:none;" class="form-group">
-												<%= m.text_field :mesajid,type: "text",class:"form-control mesajid" %>
-											</div>
 
 										</div>
-										
-										
+
 										<div class="modal-footer ">
-											<button onclick="mesajsil()" type="button" class="btn btn-success">
+											<button onclick="mesajsil()" type="button" class="silmeevet btn btn-success">
 												<span class="glyphicon glyphicon-ok-sign"></span> Evet
 											</button>
-											<button type="button" class="btn btn-default"
+											<button type="button" class="silmehayir btn btn-default"
 											data-dismiss="modal">
 												<span class="glyphicon glyphicon-remove"></span> Hayır
 											</button>
@@ -439,7 +526,7 @@ $(".<%= mesaj.id %>").click(function() {
 							<% end %>
 
 							<div class="modal fade" id="warning" tabindex="-1" role="dialog"
-							aria-labelledby="edit" aria-hidden="true">
+							aria-labelledby="Cevapla" aria-hidden="true">
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-header">
@@ -553,15 +640,13 @@ $(".<%= mesaj.id %>").click(function() {
 							});
 
 						},
-						
+
 						type : 'POST'
 
 					})
 
 				}
-				
-				
-				
+
 				function mesajcevapla() {
 
 					$modaljquery('#warning').modal({
@@ -626,52 +711,67 @@ $(".<%= mesaj.id %>").click(function() {
 							});
 
 						},
-						
+
 						type : 'POST'
 
 					})
 
 				}
-				
+
 				function mesajsil() {
-					
+
 					$modaljquery('#warning').modal({
 						show : false
 					})
 
-					
 					var form = document.getElementById("mesajsilformu");
-					var mesajid = form.elements['mesaj_mesajid'].value;
-					
-					
+					var mesajfromid = form.elements['mesaj_mesajfromid'].value;
+					var mesajtoid = form.elements['mesaj_mesajtoid'].value;
+
 					$.ajax({
 
 						url : 'mesajsil',
 						data : {
 							authenticity_token : window._token,
-							mesajid : mesajid
+							mesajfromid : mesajfromid,
+							mesajtoid : mesajtoid
 						},
 						error : function() {
-
+							alert("asd");
 						},
 						dataType : 'json',
 						success : function(data) {
 
 							if (!data.check) {
 
-								
+								$(".basarisiz").show();
 
 							} else {
 
+								$(".basarisiz").hide();
+								$(".basarili").show();
+								$(".silmeonayi").hide();
+								$(".silmeevet").attr('disabled', 'disabled');
+								$(".silmehayir").attr('disabled', 'disabled');
 							}
 
-							
+							$modaljquery("#mesajsil").on('hidden.bs.modal', function() {
+
+								$(".silmeevet").removeAttr('disabled');
+								$(".silmehayir").removeAttr('disabled');
+
+								$(".basarisiz").hide();
+
+								$(".basarili").hide();
+
+							});
+
 						},
 						dataType : 'json',
 						type : 'POST',
 
 					});
-	
+
 				}
 
 			</script>
@@ -680,16 +780,14 @@ $(".<%= mesaj.id %>").click(function() {
 				$modaljquery("#mesajgonder").on('hidden.bs.modal', function() {
 					location.reload();
 				});
-				
+
 				$modaljquery("#mesajcevapla").on('hidden.bs.modal', function() {
 					location.reload();
 				});
-				
+
 				$modaljquery("#mesajsil").on('hidden.bs.modal', function() {
 					location.reload();
 				});
-				
-				
 
 			</script>
 
