--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -220,7 +220,7 @@
 						</div>
 						
 						<div class="btn-group">
-							<button onclick="window.location='/firsatlar?enyakindakisaticilar=1'" type="button" class="btn btn-nav">
+							<button onclick="window.location='/firsatlar?kendiuniversitemdekiler=1'" type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-bell"></span>
 								<p>
 									Kendi Üniversitemdekiler
